# Apps/UIHarness/src/SUI.UIHarness.Web/Services/FindService.cs
@@ -13,6 +13,7 @@ public class FindService : IFindService
     private readonly IFindApiAuthClientProvider _authClientProvider;
     private readonly ILogger<FindService> _logger;
     private readonly string _matchApiKey;
+    private readonly string _accessTokenUrl;
 
     private static readonly string[] Scopes =
     [
@@ -36,6 +37,9 @@ public class FindService : IFindService
         _httpClient = httpClientFactory.CreateClient(nameof(FindService));
         _authClientProvider = authClientProvider;
         _matchApiKey = configuration.GetValue<string>("MATCH_API_KEY") ?? "local-dev-key-change-me";
+        _accessTokenUrl =
+            configuration.GetValue<string>("AccessTokenUrl")
+            ?? "https://localhost:7250/api/v1/auth/token";
         _logger = logger;
     }
 
@@ -227,7 +231,7 @@ public class FindService : IFindService
 
         var content = new FormUrlEncodedContent(formData);
 
-        var request = new HttpRequestMessage(HttpMethod.Post, "v1/auth/token")
+        var request = new HttpRequestMessage(HttpMethod.Post, _accessTokenUrl)
         {
             Content = content,
         };
